--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reload": "^2.2.2"
   },
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js -e js,ejs,css"
   }
 }
